# algae

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE
include/algae/: _matrix_row.h  iterator.h  literals.h  matrix.h  misc.h  vector.h
include/algae/implementation/: matrix_iterators.h
source/: main.cpp
test/: catch2  vector.cpp
